samples/_failures_safe/1761045445_f4e1e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f405ecb1.c: In function ‘main’:
./samples/SAFE/__tmp_f405ecb1.c:170:5: error: expected declaration or statement at end of input
  170 |     destroy_state_machine(sm);
      |     ^~~~~~~~~~~~~~~~~~~~~
